chabadhouse.css
/* ... */
.event-date span {
font-weight: 600;
line-height: 100%;
      font-size: 27px;
}
.times_wrapper.make_scrollable {
    overflow: hidden !important;
}
.candlelighting {
    background: var(--e-global-color-primary) url('https://clickcosupport.github.io/chabadhouse/CandleBackground.png') no-repeat center center / cover;
border-radius: 13px;
    padding: 55px 0;
}

.hp_content_wrapper [class*=widget-].candlelighting .medium_left_margin{
  color: #f4eee2;
}
.upcoming_events .wrapper {
    margin-top: 63px;
}
.hp_content_wrapper [class*=widget-].upcoming_events ul {
   
    margin: 0;
}
.hp_content_wrapper .g320 .upcoming_events .widget_content {
      display: flex;
    flex-direction: column;
    padding: 0;
   
    padding-top: 19px;
}
.hp_content_wrapper [class*=widget-].upcoming_events .readMore:after {
    content: "\f054";
    font-family: "Font Awesome 5 Free";
    font-weight: 600;
    color: var(--e-global-color-primary);
    margin-left: 4px;
    transition: color 0.3s ease, transform 0.3s ease;
    font-size: 10px;
    font-style: normal;
    position: relative;
    top: -1px;
    display: inline-block;
}
.hp_content_wrapper [class*=widget-].upcoming_events .readMore {
   text-align: right;
    color: var(--e-global-color-primary);
    border: 0;
    padding: 0;
}
.events-shabbat {
   
   justify-content: space-between;
}
.events-shabbat .clear {
    display: none;
}

.events-shabbat .no_margin, .events-shabbat .g320  {
    margin: 0 !important;
}

.events-shabbat .g320 {
  width:48%;
}
.events-shabbat .g320:nth-child(2) {
    max-width: 42%;
}
.chabad_updates .widget_header.widget_header h5, [class*=widget-] .widget_header.widget_header h5 {
margin-bottom: 7px;
}
.upcoming_events h5 {
    text-align: left !important;
}
.upcoming_events h6 a {
       font-size: 23px;
    text-transform: none;
    letter-spacing: -.3px;
}
.event-content {
    text-align: left;
}
.event-content-wrap {
    display: flex;
    width: 100%;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}
.event-content small {
    font-weight: 600;
    letter-spacing: .3px;
    font-size: 15px !important;
    color: #6a6666 !important;
    margin-bottom: 7px;
}
.upcoming_events li {
    border: 1px solid #f4eee2;
 background: #FEFDFC !important;
    padding: 14px 14px 15px 21px !important;
    border-radius: 10px;
    margin-bottom: 10px;
        display: flex;
    justify-content: flex-start;
    flex-direction: row;
    align-items: center;
    gap:10px;
    display: flex;
}
.upcoming_events small {
  font-size: 14px;
    color: #6a6666;
    font-weight: 600;
    letter-spacing: .3px;
    margin-bottom:8px;
}
.about-section .synopsis {
    font-size: 18px;
    line-height: 1.3em;
    margin-top: 9px;
}
/* fonts */

.chabad_updates .widget_header.widget_header h5, [class*=widget-] .widget_header.widget_header h5, .header-title{
    text-transform: none;
letter-spacing: 0;
}


.hp-row, .hp-table>:nth-of-type(2n), .hp-row {
    padding: 100px 10px;
    background: #f9f6f0;

}

/* about section template 6 */
.banner-updates .clearfix:after {
content: none !important;
}
.banner-updates img {
    width: 47%;
    border-radius: 13px;
        object-fit: cover;
}
.banner .widget_content.index_format .item .readMore {
        position: relative;
    top: auto;
    right: auto;
    margin-top: 34px;
}
.banner .widget_content.index_format .item {
       background: none;
    padding: 0;
    flex-direction: row;
    gap: 54px;
        display: flex;
        align-items: stretch;
    align-items: center;
}
.about-content {
    width: 55%;
    padding: 20px 0;
    flex-direction: column;
        display: flex;
    align-items: flex-start;
    
}
.banner .widget_content.index_format .item .title, .banner .widget_content.index_format .item .title a {
        color: var(--e-global-color-primary);
    font-family: var(--heading-font-family), serif !important;
    text-transform: none;
    letter-spacing: 0;
    font-weight: 600;
    margin-top: 11px;
}

.banner .widget_content.index_format .item .title {
       margin-bottom: 12px;
}
.banner .widget_content.index_format .item .subtitle, .connect .synopsis {
    text-transform: none;
    font-size: 19px;
    line-height: 1.5em;
    padding: 0;
    margin: 0;
    margin-bottom: 10px;
    position: relative;
    text-align: left;
}

.connect .synopsis {
    max-width: 433px;
    padding-bottom: 140px;
}


/*6 icon set */

.departments a.readMore {
    display: none;
}
.ct-h-actions.three-icons {
  background: #F8F8F8;
  padding-top: 6em;
  padding-bottom: 5em;
}

.ct-h-actions.three-icons a.readMore {
  background: none;
  font-size: 17px;
  line-height: 0;
  font-size: 0;
  color: transparent;
  margin-top: 0;
}

.ct-h-actions.three-icons a.readMore:hover {
  color: #0F2E2F !important;
  transition: 0.3s;
}

.ct-h-actions {
  padding-top: 20px;
  padding-bottom: 40px;
      background: #f9f6f0;
}

@media (max-width: 800px) {
  .ct-h-actions {
    padding-bottom: 0;
  }
}
/* section widths */
.ct-h-actions .wrapper, #footer .g960, .banner .widget_content.index_format .item, .events-shabbat, .connect-section, .latest_photos .wrapper, #footer .g960{
  width: 1140px;
  max-width: 90%;
  margin: 0 auto;
  padding-right: 15px;
  padding-left: 15px;
  text-align: center;
}


@media (max-width: 1140px) {
  .ct-h-actions .wrapper, .banner .widget_content.index_format .item, .events-shabbat, .connect-section, .latest_photos .wrapper, #footer .g960 {
    width: 98%;
  }
}
 .hp-table {
    background: #f9f6f0;
}
.ct-h-actions .widget_header {
  display: none;
}

.ct-h-actions [class^="widget-"].chabad_updates .widget_content {
  text-align: center;
  display: flex;
  justify-content: space-between;
      flex-wrap: wrap;
      height: auto !important;
}
.ct-h-actions .item:hover .icon,
.ct-h-actions [class^="widget-"].chabad_updates .widget_content .item:hover .icon {
    background: var(--e-global-color-accent) !important;
}
/* ... */

